<resources>
    <string name="app_name">SearchIn</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="todo">todo</string>
    <string name="button">Log In</string>
    <string name="button2">log off</string>
    <string name="register_option">Register Option</string>
    <string name="register_for_user">User</string>
    <string name="register_for_organisation">Organisation</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registrationform">registration form</string>
    <string name="registerationform">Registration Form</string>
    <string name="registrationForm">Registration Form</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email_id">Email Id</string>
    <string name="checkBox">Accept Terms and Conditions</string>
    <string name="agree">Agree and Join</string>
    <string name="addcompany">Add a Company</string>
    <string name="detail">Company Pages offer  public information about each company on SearchIn.To add a company name, please enter the company name and your email address at this company.</string>
    <string name="company_name">Company Name</string>
    <string name="emailadd">Your email address at company</string>
    <string name="checkbox">I verify that i am the official representative of this company and have the right to act on behalf of my company in the creation of this page.</string>
    <string name="join">Agree and Join</string>
    <string name="password_error">Please enter a password</string>
    <string name="error_invalid_password">Please enter a minimum password of 6 characters</string>
    <string name="name_error">Please enter your name</string>
    <string name="email_error">Please enter a email address</string>
    <string name="error_invalid_email">Email is not valid</string>
    <string name="already_have_account_login">Already have account? Login</string>
    <string name="not_have_account_register">Not have account? Register</string>
    <string name="job_id_error">Please enter the job id</string>


    <string name="forgot_password_recover">Forgot Password? Recover</string>

    <string name="passadd">Password</string>
    <string name="emailid">Email Id</string>
    <string name="organisationLogin">Organisation Login</string>
    <string name="organisation_profile">Organisation Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Hello">Hello</string>
    <string name="MyConnect">MyConnect</string>
    <string name="Profile">Profile</string>
    <string name="jobpost">Post a Job</string>
    <string name="orgname">Organisation Name</string>
    <string name="jobid">Job Id</string>
    <string name="description">Job Description</string>
    <string name="requirements">Job Requirements</string>
    <string name="state">State</string>
    <string name="phoneno">Phone Numner</string>
    <string name="designation">Designation</string>
    <string name="skills">Skills</string>
    <string name="education">Education</string>
    <string name="login_option">Login Option</string>
    <string name="not_have_an_account_register_now">Not have an account?Register now</string>
    <string name="login_as_organisation">Login as Organisation</string>
    <string name="login_as_user">Login as user</string>
    <string name="person_name">Person Name</string>
    <string name="person_email">Person Email</string>
    <string name="additionalDetails">Additional Details</string>
    <string name="additional">Add or Edit Details</string>

    <string name="uploadbtn">Upload</string>
    <string name="upload">UPLOAD</string>
    <string name="save_as">SAVE</string>
    <string name="lastname">Lastname</string>
    <string name="stateview">State:</string>
    <string name="desig">Designation:</string>
    <string name="skillsview">Skills:</string>
    <string name="educationview">Education:</string>
    <string name="myProfile">My Profile</string>
    <string name="users">Users</string>
    <string name="_02_03_2019_05_59pm_as">02/03/2019 05:59PM</string>
    <string name="delivered_as">delivered</string>
    <string name="option_login">LOGIN OPTION</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_description">Enter description</string>
    <string name="online">Online</string>
    <string name="start_typing">Start Typing</string>
    <string name="his_name">His Name</string>
    <string name="login_as_organisation_as">Login as Organisation</string>
    <string name="login_user">User</string>
    <string name="login_organisation">Organisation</string>
    <string name="save">SAVE</string>
    <string name="his_message_as">His Message</string>
    <string name="_02_03_2019_05_59pm">02/03/2019 05:59PM</string>
    <string name="delivered">delivered</string>
    <string name="his_message">His Message</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="_1_2k_likes">1.2k Likes</string>
    <string name="name">Name</string>
    <string name="_33_min">33 min</string>
    <string name="title">Title</string>
    <string name="the_description_of_the_post">The DEscription of The Post</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="chat_list">Chat List</string>
    <string name="todo3">TODO</string>
    <string name="todo5">TODO</string>
    <string name="organisation_name_error">Please enter organisation name</string>
    <string name="description_error">Invalid description</string>
    <string name="requirements_error">Please enter job requirements</string>
    <string name="share">Share</string>


</resources>
