<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightblue"
    tools:context="com.cg.project.searchin.JobPost">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jobpost"
        android:textStyle="bold"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:layout_marginLeft="145dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25dp"/>

    <EditText
        android:id="@+id/orgname"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="40dp"
         android:layout_marginTop="130dp"

        android:inputType="textPersonName"
        android:hint="@string/orgname" />



    <EditText
        android:id="@+id/jobid"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="190dp"

        android:inputType="textPersonName"
        android:hint="@string/jobid" />


    <EditText
        android:id="@+id/description"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="250dp"
        android:gravity="start|top"

        android:inputType="textMultiLine"
        android:hint="@string/description" />


    <EditText
        android:id="@+id/requirements"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="310dp"
        android:gravity="start|top"

        android:inputType="textMultiLine"
        android:hint="@string/requirements" />

    <Button
        android:id="@+id/savebtn"
        android:gravity="center"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:layout_marginLeft="160dp"
        android:text="@string/save"
        android:background="@drawable/btn_login"
        />


</RelativeLayout>