<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cg.project.searchin.AddPostActivity"
    android:background="@color/lightblue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/pTitleEt"
            android:background="@drawable/edittextstyle"
            android:padding="10dp"
            android:hint="@string/enter_title"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            />

        <ImageView
            android:id="@+id/pImageIv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightblue"
            android:minHeight="200dp"
            android:contentDescription="@string/todo5" />

        <EditText
            android:id="@+id/pDescriptionEt"
            android:background="@drawable/edittextstyle"
            android:padding="10dp"
            android:hint="@string/enter_description"
            android:inputType="textCapSentences|textMultiLine"
            android:minHeight="120dp"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="" />


        <Button
            android:id="@+id/pUploadBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/upload"
            tools:text="@string/uploadbtn"
            android:textColor="@color/black"
            android:background="@drawable/btn_login"


            />


    </LinearLayout>

</ScrollView>
