<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".UserLogin"
    android:background="@color/lightblue"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="30sp" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/searchin_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/emailEt"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:autofillHints="" />

    <EditText
        android:id="@+id/passwordEt"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/emailEt"
        android:autofillHints="" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:text="@string/login"
        android:background="@drawable/btn_login"
        android:layout_below="@+id/passwordEt"/>

    <TextView
        android:id="@+id/recoverPassTv"
        android:layout_width="365dp"
        android:layout_height="40dp"
        android:layout_marginTop="480dp"
        android:layout_marginBottom="230dp"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:text="@string/forgot_password_recover"
        android:textAlignment="center"
        android:textColor="#000007" />

    <TextView
        android:id="@+id/new_userTV"
        android:layout_width="365dp"
        android:layout_height="40dp"
        android:layout_marginTop="530dp"
        android:layout_marginBottom="230dp"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:text="@string/not_have_account_register"
        android:textAlignment="center"
        android:textColor="#000007" />





</RelativeLayout>