<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserAdditionalDetails">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/additionalDetails"
        android:textStyle="bold"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="100dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25dp"/>

    <EditText
        android:id="@+id/state"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="130dp"

        android:inputType="textPersonName"
        android:hint="@string/state" />



    <EditText
        android:id="@+id/designation"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="190dp"

        android:inputType="textPersonName"
        android:hint="@string/designation" />


    <EditText
        android:id="@+id/skills"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="250dp"
        android:gravity="start|top"

        android:inputType="textMultiLine"
        android:hint="@string/skills" />


    <EditText
        android:id="@+id/education"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="310dp"
        android:gravity="start|top"

        android:inputType="textMultiLine"
        android:hint="@string/education" />

    <Button
        android:id="@+id/savebtn_user"

        android:layout_width="wrap_content"
        android:background="@color/colorAccent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:layout_marginLeft="160dp"
        android:text="SAVE" />


</RelativeLayout>