<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    android:background="@color/lightblue"

    >

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"><RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterOption"
    android:padding="20dp">

    <TextView
        android:id="@+id/add_company"
        android:layout_width="366dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"

        android:layout_marginTop="0dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="641dp"
        android:text="@string/addcompany"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/details"
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        android:layout_below="@+id/add_company"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="461dp"
        android:text="@string/detail"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/companyName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/details"
        android:layout_alignParentTop="true"
        android:layout_marginTop="280dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/company_name"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/emailadd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/details"
        android:layout_alignParentTop="true"
        android:layout_marginTop="397dp"

        android:autofillHints=""
        android:ems="10"
        android:hint="@string/emailadd"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <EditText

        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailadd"
        android:layout_alignParentTop="true"
        android:layout_marginTop="471dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/passadd"
        android:inputType="textPassword"
        android:textSize="20sp" />



    <CheckBox
        android:id="@+id/check_box"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pass"
        android:layout_alignParentTop="true"
        android:layout_marginTop="552dp"
        android:text="@string/checkbox"
        android:textSize="20sp"

        />

    <Button
        android:id="@+id/join"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/check_box"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="146dp"
        android:background="@drawable/btn_login"
        android:gravity="center"
        android:layout_marginRight="146dp"
        android:text="@string/join" />


</RelativeLayout>
    </LinearLayout>
</ScrollView>
