<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginOption"
    android:background="@color/lightblue"
    android:padding="20dp">

    <TextView
        android:id="@+id/loginOption"
        android:layout_width="188dp"
        android:layout_height="62dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="100dp"
        android:textColor="@color/black"
        android:text="@string/login_option"
        android:textSize="30sp"
        android:textStyle="bold"
        android:padding="5dp"
        />

    <Button
        android:id="@+id/loginUser_btn"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/loginOrganisation_btn"
        android:layout_marginBottom="56dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:background="@drawable/btn_login"

        android:text="@string/login_user" />

    <Button
        android:id="@+id/loginOrganisation_btn"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="251dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:background="@drawable/btn_login"
        android:text="@string/login_organisation" />

    <TextView
        android:id="@+id/new_userTV"
        android:layout_width="365dp"
        android:layout_height="40dp"
        android:layout_marginTop="470dp"
        android:layout_marginBottom="230dp"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:text="@string/not_have_an_account_register_now"
        android:textAlignment="center"
        android:textColor="#000000" />


</RelativeLayout>