<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none" >

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".RegisterUser"
            android:padding="20dp">


            <TextView
                android:id="@+id/registrationform"
                android:layout_width="366dp"
                android:layout_height="70dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"

                android:layout_marginTop="0dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="641dp"
                android:text="@string/registrationForm"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/registrationform"
                android:layout_alignParentTop="true"
                android:layout_marginTop="80dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/firstName"
                android:inputType="textPersonName"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/firstName"
                android:layout_alignParentTop="true"
                android:layout_marginTop="174dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/lastName"
                android:inputType="textPersonName"
                android:textSize="20sp" />

            <EditText

                android:id="@+id/email_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lastName"
                android:layout_alignParentTop="true"
                android:layout_marginTop="278dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress"
                android:textSize="20sp" />

            <EditText

                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_id"
                android:layout_alignParentTop="true"
                android:layout_marginTop="399dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password"
                android:layout_alignParentTop="true"
                android:layout_marginTop="502dp"
                android:text="@string/checkBox"
                android:textSize="20sp" />

            <Button
                android:id="@+id/agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/checkBox"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"


                android:layout_marginTop="46dp"
                android:layout_marginEnd="153dp"
                android:layout_marginRight="153dp"
                android:text="@string/agree" />


        </RelativeLayout>
    </LinearLayout>
</ScrollView>
