<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterOption"
    android:padding="20dp">

    <TextView
        android:id="@+id/registerOption"
        android:layout_width="368dp"
        android:layout_height="87dp"
        android:text="@string/register_option"
        android:layout_marginTop="100dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:textSize="30sp"
        android:textStyle="bold"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/registerUser_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/registerOrganisation_btn"
        android:layout_marginBottom="-1dp"
        android:text="@string/register_for_user" />

    <Button
        android:id="@+id/registerOrganisation_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="251dp"
        android:text="@string/register_for_organisation" />


</RelativeLayout>