<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/lightblue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.blogspot.atifsoftwares.circularimageview.CircularImageView
            android:id="@+id/profileIv"
            android:layout_width="50dp"
            app:c_border_color="@null"
            android:visibility="gone"
            android:layout_height="50dp"
            android:src="@drawable/ic_default_img"/>

        <TextView
            android:id="@+id/timeTv"
            android:text="@string/_02_03_2019_05_59pm"
            android:layout_width="wrap_content"
            android:textSize="12sp"
            android:textColor="#000000"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/messageTv"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="#000000"
            android:padding="15dp"
            android:text="@string/his_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/isSeenTv"
        android:gravity="end"
        android:textAlignment="textEnd"
        android:text="@string/delivered"
        android:visibility="gone"/>


</LinearLayout>